@@ -6732,7 +6732,7 @@ SCIP_RETCODE initSolve(
 
    /* initialize NLP if there are nonlinearities and there is someone who can make use of it and the user did not switch it off */
    assert(!scip->set->continnonlinpresent || scip->set->nonlinearitypresent); /* if there is continous nonlinearity, then there should be nonlinearity in general */
-   if( scip->set->nonlinearitypresent && scip->set->nlprequired && !scip->set->nlp_disable )
+   if( scip->set->nonlinearitypresent && !scip->set->nlp_disable )
    {
       SCIPdebugMessage("constructing empty NLP\n");
 
@@ -14659,23 +14659,6 @@ void SCIPmarkNonlinearitiesPresent(
    scip->set->nonlinearitypresent = TRUE;
 }
 
-/** marks that there is a plugin that makes use of an NLP if nonlinear constraints are present
- * This method should be called by heuristics, separators, propagators, or relaxators that can make use of an NLP relaxation of the problem.
- * 
- * The function should be called during initialization or presolving.
- * 
- * If some constraint handler signals that it has nonlinear rows to contribute and there are plugins that can use an NLP,
- * then SCIP initializes the NLP when initializing the solving process (initsol).
- */
-void SCIPmarkRequireNLP(
-   SCIP*                 scip                /**< SCIP data structure */
-   )
-{
-   SCIP_CALL_ABORT( checkStage(scip, "SCIPmarkRequireNLP", TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, FALSE, FALSE, FALSE) );
-   
-   scip->set->nlprequired = TRUE;
-}
-
 /** returns whether constraints representable as nonlinear rows are present that involve continuous nonlinear variables
  * @see SCIPmarkContinuousNonlinearitiesPresent
  */
@@ -14698,17 +14681,6 @@ SCIP_Bool SCIPhasNonlinearitiesPresent(
    SCIP_CALL_ABORT( checkStage(scip, "SCIPhasNonlinearitiesPresent", FALSE, FALSE, FALSE, FALSE, TRUE, TRUE, TRUE, TRUE, FALSE, FALSE, FALSE) );
    
    return scip->set->nonlinearitypresent;
-}
-
-/** returns whether some plugin requires an NLP
- * @see SCIPmarkRequireNLP */ 
-SCIP_Bool SCIPisNLPRequired(
-   SCIP*                 scip                /**< SCIP data structure */
-   )
-{
-   SCIP_CALL_ABORT( checkStage(scip, "SCIPisNLPRequired", TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, FALSE, FALSE, FALSE) );
-   
-   return scip->set->nlprequired;
 }
 
 /** returns, whether an NLP has been constructed */
